[project]
name = "devtools"
version = "0.1.0"
description = ""
authors = [
    {name = "hyw208",email = "hyw208@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "names (>=0.3.0,<0.4.0)",
    "flower (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "devtools"}
]

[tool.pytest.ini_options]
pythonpath = ["devtools"]
testpaths = ["tests"]

[tool.coverage.run] 
source = ["devtools"]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
include = ["devtools/*/*.py"]
fail_under = 2
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
flake8 = "^7.1.1"
mypy = "^1.15.0"
black = "^25.1.0"

[project.scripts]
api = "devtools.api:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
